angular/src/app/features/user/settings/settings.component.css
/* settings.component.css */

:host {
  display: block;
}

.settings-nav-tab {
  display: block;
  text-align: center;
  min-width: 100vw;
  background-color: var(--dark-bg);
  padding: var(--gf-12) 0;

  & a {
    display: inline;
    text-decoration: none;
    color: var(--dark-text-muted);
    margin: 0 var(--gf-16);

    &:hover {
      color: var(--dark-text);
    }

    &.active {
      color: var(--primary);
    }
  }
}

.settings-nav-select {
  appearance: none;
  -webkit-appearance: none;

  display: none;
  border: none;
  outline: none;
  margin: 0 auto;
  width: 90%;
  height: 3rem;
  padding-left: var(--gf-24);
  border-radius: var(--gf-10);
  background-color: var(--dark-bg);
  color: var(--dark-text);

  background-image: url("/assets/vectors/chevrons-down-up-white.svg");
  background-repeat: no-repeat;
  background-position: right var(--gf-24) center;
  background-size: 20px;
}

/* Media */

@media (prefers-color-scheme: light) {
  .settings-nav-select {
    background-image: url("/assets/vectors/chevrons-down-up-black.svg");
  }
}

@media (max-width: 36rem) {
  .settings-nav-tab { display: none; }
  .settings-nav-select { display: block; }
}

